# Mental-Disorder-TS

./: 1_manual_feature_engineering-copy.ipynb  1_manual_feature_engineering.ipynb  1_manual_feature_engineering_MIL.ipynb  README.md  lightgbm_utils.py  manual_preprocess.py  organize_hyperaktiv_data.py  plot_results.ipynb  plot_results_MIL.ipynb  pyproject.toml  split_day_windows.py  utils.py
processed_data/: depresjon_8_21_y.csv  hyperaktiv_6_22_y.csv  manual_depresjon_6_22_day.csv  manual_depresjon_6_22_night.csv  manual_depresjon_8_21_full_24h.csv  manual_depresjon_day.csv  manual_depresjon_full_24h.csv  manual_depresjon_night.csv  manual_hyperaktiv_6_22_day.csv  manual_hyperaktiv_6_22_full_24h.csv  manual_hyperaktiv_6_22_night.csv  manual_hyperaktiv_8_21_day.csv  manual_hyperaktiv_window_day.csv  manual_hyperaktiv_window_full_24h.csv  manual_hyperaktiv_window_night.csv  manual_psykose_6_22_night.csv  manual_psykose_8_21_full_24h.csv  psykose_y.csv
processed_data/windows/: depresjon_6_22_day.csv  depresjon_6_22_night.csv  depresjon_8_21_day.csv  depresjon_8_21_full_24h.csv  depresjon_8_21_night.csv  hyperaktiv_6_22_day.csv  hyperaktiv_6_22_night.csv  hyperaktiv_8_21_full_24h.csv  hyperaktiv_8_21_night.csv  psykose_6_22_day.csv  psykose_6_22_full_24h.csv  psykose_6_22_night.csv  psykose_8_21_day.csv  psykose_8_21_night.csv
results/depresjon/: _final_scores_8_21_day_GBM  _final_scores_8_21_full_24h_GBM  final_scores_6_22_day_GBM  final_scores_6_22_day_RF.csv  final_scores_6_22_full_24h_GBM  final_scores_6_22_full_24h_RF.csv  final_scores_6_22_night_GBM  (+44 more)
(+2254 files in other folders)
