[tool.poetry]
name = "mental-disorder-ts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^2.2.3"
jupyter = "^1.1.1"
notebook = "^7.2.2"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
pyarrow = "^18.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
